
* ==================== CORE CHANGES ===================

* The new option --keep-debuginfo=no|yes (default no) can be used to
  keep symbols etc for unloaded code. This allows saved stack traces
  (e.g. memory leaks) to include file/line info for code that has been
  dlclose'd (or similar). See user manual for more information and
  known limitations.

* ================== PLATFORM CHANGES =================

* Preliminary support for macOS 10.13 has been added.
* mips: support for MIPS32/MIPS64 Revision 6 has been added.
* mips: support for MIPS SIMD architecture (MSA) has been added.
* mips: support for MIPS N32 ABI support has been added.

* ==================== TOOL CHANGES ====================

* Helgrind:

  - Addition of a flag --delta-stacktrace=no|yes [yes on linux amd64/x86],
    specifying how full history stack traces are computed. Using yes can speed
    up Helgrind by 25% when using --history-level=full.

* ==================== OTHER CHANGES ====================

* A new configure option --enable-lto=yes allows to build Valgrind
  with link time optimisation. If the toolchain supports it,
  this produces a smaller/faster Valgrind (up to 10%).
  Note that if you are doing some Valgrind development, --enable-lto=yes
  significantly slows down the build.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

79362   Debug info is lost for .so files when they are dlclose'd
208052  strlcpy error when n = 0