@@ -1,0 +1,2 @@
+prog: suppfree
+vgopts: --suppressions=suppsrc_lineno.supp -q
