@@ -1,0 +1,2 @@
+prog: suppfree
+vgopts: --suppressions=suppsrc_sanlineno.supp -q
