@@ -18,6 +18,7 @@ support for X86/macOS 10.13, AMD64/macOS 10.13.
   (e.g. memory leaks) to include file/line info for code that has been
   dlclose'd (or similar). See user manual for more information and
   known limitations.
+* Ability to specify suppressions based on source file name and line number.
 
 * ================== PLATFORM CHANGES =================
 
@@ -105,6 +106,7 @@ where XXXXXX is the bug number as listed below.
 388862  Add replacements for wmemchr and wcsnlen on Linux
 389373  exp-sgcheck the 'impossible' happened as Ist_LoadG is not instrumented
 389065  valgrind meets gcc flag -Wlogical-op
+390471  suppression by specification of source-file line number
 390723  make xtree dump files world wide readable, similar to log files
 391861  Massif Assertion 'n_ips >= 1 && n_ips <= VG_(clo_backtrace_size)'
 392449  callgrind not clearing the number of calls properly
